2002-05-23  Clint Adams  <clint@zsh.org>

	* Matt Zimmerman: 17211: Completion/Unix/Command/_cvs:
	respect $CVSIGNORE.

2002-05-21  Peter Stephenson  <pws@csr.com>

	* 17201: Doc/Zsh/mod_tcp.yo: add example use of ztcp.

	* 17141 plus mods: Src/utils.c, Src/Zle/zle_main.c,
	Src/Zle/zle_thingy.c, Doc/Zsh/zle.yo: `zle -F fd handler'
	installs shell function handler for when data becomes available
	on fd while zle is active.  Requires select().

2002-05-21  Sven Wischnowsky  <wischnow@zsh.org>

	* 17195: Src/Zle/comp.h, Src/Zle/compcore.c, Src/Zle/compctl.c,
	Src/Zle/complist.c, Src/Zle/compresult.c: fix for
	file-type-tests in nested quotes and don't count space
	file-type-character

	* 17194: Src/Zle/computil.c: improve calculation of used
	columns for match-max-length

	* 17193: Completion/Unix/Command/_init_d: let _init_d use a
	pre-pattern

	* 17192: Src/Zle/compcore.c: fix for completion in nested
	quotes where the sub-word ends in a backslash

	* 17191: Completion/Base/Utility/_arguments,
	Completion/Unix/Command/_rsync: fix removal of automatically
	added specs (from the -- option) for which a user-defined one
	is present

	* 17190: Src/Zle/computil.c: avoid printing in the last screen
	column when preparing a completion listing with compdescribe

	* 17189: Completion/Unix/Type/_path_files: better splitting of
	-g-strings; this failed when patterns contained spaces

2002-05-20  Felix Rosencrantz <f_rosencrantz@yahoo.com>

	* 17021: Completion/Unix/Command/.distfiles,
	Completion/Unix/Command/_valgrind: Function for Julian Seward's
	memory checking tool.

2002-05-20  Felix Rosencrantz <f_rosencrantz@yahoo.com>

	* 16836: Completion/Unix/Command/.distfiles,
	Completion/Unix/Command/_larch: Function for Tom Lord's arch
	SCM tool.  This function was mentioned in the specified post.  
	It still has many problems, but seems to be the fullest larch
	completion function so far.  Added at Adam's request.

2002-05-17  Peter Stephenson  <pws@csr.com>
